[build-system]
requires = ["setuptools", "wheel", "Cython"]

[tool.coverage.run]
plugins = [
    "Cython.Coverage"
]
omit = [
    "*/__init__.py",
    "tests/*",
]
source = [
    "src",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "@(abc\\.)?abstractmethod",
]
include = ["src/*"]

[tool.black]
line-length = 120
extend-exclude = "docs"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
select = ["E", "F", "UP"]
ignore = ["UP015"]
unfixable = ["F401"]
target-version = "py38"
exclude = ["docs"]
