[project]
name = "DAWG2"
version = "0.13.0"
requires-python = ">= 3.8"
description = "Fast and memory efficient DAWG (DAFSA) for Python"
readme = "README.md"
license = {file = "LICENSE"}

authors = [
    {name = "Mikhail Korobov", email = "kmike84@gmail.com"}
]
maintainers = [
    {name = "insolor", email = "insolor@gmail.com"}
]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/pymorphy2-fork/DAWG/"
Changelog = "https://github.com/pymorphy2-fork/DAWG/blob/master/CHANGES.md"

[build-system]
requires = ["setuptools", "wheel", "Cython"]

[tool.coverage.run]
plugins = ["Cython.Coverage"]
source = ["src", "tests"]
omit = ["bench/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
extend-exclude = "docs"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
select = ["E", "F", "UP"]
ignore = ["UP015"]
unfixable = ["F401"]
target-version = "py38"
exclude = ["docs"]
